[workspace]
members = [
  "crates/native",
  "crates/risc0",
  "crates/sp1",
  "crates/zkvm",

  # binaries
  "runner",

  # examples
  "examples/fibonacci",
  "examples/sha2-chain",

  # performance
  "perf",
]

resolver = "2"

[workspace.dependencies]
strata-zkvm = { path = "crates/zkvm" }
strata-native-zkvm-adapter = { path = "crates/native" }

fibonacci = { path = "examples/fibonacci" }
sha2-chain = { path = "examples/sha2-chain" }

arbitrary = { version = "1.3.2", features = ["derive"] }
bincode = "1.3"
borsh = { version = "1.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
