[package]
name = "zkvm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
strata-zkvm.workspace = true

fibonacci.workspace = true
sha2-chain.workspace = true
schnorr.workspace = true

argh = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# sp1
strata-sp1-adapter = { path = "../crates/sp1", optional = true }
strata-sp1-artifacts = { path = "../artifacts/sp1", optional = true }

# risc0
strata-risc0-adapter = { path = "../crates/risc0", optional = true }
strata-risc0-artifacts = { path = "../artifacts/risc0", optional = true }

[features]
default = ["sp1-mock", "risc0-mock"]
sp1 = ["strata-sp1-adapter/prover", "strata-sp1-artifacts"]
sp1-mock = [
  "sp1",
  "strata-sp1-adapter/mock",
  "strata-sp1-artifacts/mock",
  "strata-sp1-adapter/perf",
]

risc0 = ["strata-risc0-adapter/prover", "strata-risc0-artifacts"]
risc0-mock = ["risc0", "strata-risc0-adapter/mock", "strata-risc0-adapter/perf"]
