[package]
name = "guest-schnorr"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
schnorr = { path = "../../../examples/schnorr" }
strata-sp1-adapter = { path = "../../../crates/sp1", features = ["zkvm"] }
sp1-zkvm = "4.0.0"

[features]
mock = ["strata-sp1-adapter/mock"]

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
# k256 = { path = "../../../../../../playground/elliptic-curves/k256" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.1" }
